Fixed about-section grid not stacking on mobile devices

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,6 +4,7 @@ body {
 
 
 
+
 #showcase:before,
 #image-break:before {
 
@@ -21,70 +22,6 @@ body {
 
 
 
-
-
-/* NAVBAR */
-
-
-/* nav-container {
-    height: 10vh;
-    
-}
-
-nav-container .toggle-container {
-    height: 20vh;;
-}
-
-/* toggle this on/off */
-#navbar {
-    overflow: hidden;
-    position: relative;   
-}
-#navbar .toggle {
-    display: inline-block;;
-}
-
-.toggle-container input {
-    height: 40px;    
-    width: 40px;
-    position: absolute;
-    left: 0;
-    overflow: hidden;
-
-}
-.hamburger {
-    width: 20px;
-    height: 20px;
-    background: white;
-    display: inline-block;
-}
-#navbar .container {
-    
-    
-    
-}
-
-.toggle:checked  + .container {
-    display: none;
-    
-    
-}
-
-
-#navbar .container .main-navbar {
-    
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-
-}
-
-#navbar .container .main-navbar a {
-    width: 100%;
-}
-
-
 #grid-bot .container .articles-container {
     grid-template-columns: repeat(2, 1fr);
 }
@@ -94,7 +31,7 @@ nav-container .toggle-container {
     height: 300px;
     width: 100%; 
   
- } */
+ }
 
 
 
@@ -105,6 +42,8 @@ nav-container .toggle-container {
 /* Small Screen/Mobile */
 
 @media(max-width: 790px) {
+
+    body 
 
     /* FIRST GRID */
 
